--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Original Flappy Bird -JavaScript</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Teko:700"
-      rel="stylesheet"
-    />
-    <script src="https://www.unpkg.com/solana-connect"></script>
-    <style>
-      canvas {
-        border: 1px solid #000;
-        display: block;
-        margin: 0 auto;
-      }
-    </style>
-  </head>
-  <body>
-    <canvas id="bird" width="320" height="480"></canvas>
-    <script>
-      const solConnect = new window.SolanaConnect();
-      solConnect.openMenu();
-    </script>
-    <script src="game.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><meta http-equiv=X-UA-Compatible content="ie=edge"><meta name=theme-color content=#272b30><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=0"><link rel=stylesheet href=https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css integrity=sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T crossorigin=anonymous><title>FlappyBird</title><meta name=google-site-verification content=UoRb1chXxdu0BzKwtt0PneXVdCATq4u6d_mvn3gosC8><script src=https://cdn.ethers.io/lib/ethers-5.2.umd.min.js></script><link rel=icon href=favicon.ico><script defer=defer src=main.bf925da284ed542a6d6c.bundle.js></script><link href=main.98653bed2b991e01d09d.css rel=stylesheet></head><body><div class=container><button id=connect class=bg-slate-400>Connect wallet</button><div id=walletID class=text-white></div><div id=Game class="col-sm-12 d-flex justify-content-center mt-5"></div></div></body></html>
